Fix paragraph spacing on landing page

--- a/styles/landing_style.css
+++ b/styles/landing_style.css
@@ -83,25 +83,8 @@
     max-width: 90%;
 }
 
-.landing_about ul {
-  margin: auto;
+.landing_about .text_container:nth-of-type(1) {
   padding-bottom: 1rem;
-  width: 22rem;
-}
-
-.landing_about .tools_list {
-  display: inline-block;
-  height: 2rem;
-  padding: .5rem;
-  width: 3rem;
-}
-
-.landing_about .tools_icon {
-  display: inline-block;
-  margin: 0 .5rem;
-  position: relative;
-  top: .7rem;
-  width: 3rem;
 }
 
 .landing_about .button_container {
